# docker-python-env

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
src/docker_python_env/: __init__.py
terraform/: main.tf  outputs.tf  variables.tf  versions.tf
tests/: test_main.py
